profile section clipping out on mobile devices fixed:potentially

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -744,10 +744,11 @@ video {
 #all-chats-page{
   background-color: #051937;
   padding: 5px;
-  height: 95vh;
+  height: 90vh;
   width: 20vw;
   overflow-y:hidden;
   text-shadow: 0px 0px 2px #FFFFFF;
+  border-radius: 0px 0px 5px 0px;
 }
 
 .all-chats{
@@ -779,12 +780,13 @@ video {
   background-color: #092856;
   display: flex;
   flex-direction: row;
+  align-items: center;
   padding: 5px;
   justify-content: space-between;
   min-height: 50px;
   position: fixed;
   width: 20vw;
-
+  height: 10vh;
 }
 /* ------------- CSS FOR THE SINGLE CHAT COMPONENT ------------------------------------------------------------------- */
 #single-chat{
@@ -891,6 +893,7 @@ video {
 
   #all-chats-page {
     width: 35vw;
+    height: 90vh;
     font-size: 16px;
   }
 
@@ -906,6 +909,8 @@ video {
 
   #profile-section {
     width: 35vw;
+    height: 10vh;
+    align-items: center;
   }
 
   #single-chat{
@@ -915,6 +920,10 @@ video {
   .messages{
     font-size: 12px;
     padding: 5px 10px;
+  }
+
+  .profile-username{
+    display: none;
   }
 
 }
